add button in index.html

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>pierre-feuille-ciseaux</title>
-    <script src="main.js" charset="utf-8"></script>
+  <script type="text/javascript" src="main.js"></script>
   </head>
   <body>
-
+<button type="button" name="button" onclick="game()">START</button>
   </body>
 </html>
