add rules of the game in index.htmlk

--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="utf-8">
     <title>pierre-feuille-ciseaux</title>
   <script type="text/javascript" src="main.js"></script>
+  <link rel="stylesheet" href="style.css">
+
   </head>
   <body>
-<button type="button" name="button" onclick="game()">START</button>
+    <section>
+      <h1>PIERRE-FEUILLE-CISEAUX</h1>
+      <h3>Régles du jeu</h3>
+      <p>jouer au jeu classique de pierre feuille ciseaux contre l'ordinateur <br>
+      les regles sont simple <br>
+      La pierre gagne face aux ciseaux. Elle les broie. <br>
+  Les ciseaux l’emportent face à la feuille qu’ils coupent. <br>
+  La feuille bat la pierre en l’enveloppant.<br>
+  <span>bonne chance et que le meilleur gagne</span>
+</p>
+      <button type="button" name="button" onclick="game()">START</button>
+    </section>
   </body>
 </html>
