--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>pierre-feuille-ciseaux</title>
   <script type="text/javascript" src="main.js"></script>
   <link rel="stylesheet" href="style.css">
-
+<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
   </head>
   <body>
     <section>
