add style button in style.css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h1>PIERRE-FEUILLE-CISEAUX</h1>
       <h3>Régles du jeu</h3>
       <p>jouer au jeu classique de pierre feuille ciseaux contre l'ordinateur <br>
-      les regles sont simple <br>
+      les regles sont simple : <br>
       La pierre gagne face aux ciseaux. Elle les broie. <br>
   Les ciseaux l’emportent face à la feuille qu’ils coupent. <br>
   La feuille bat la pierre en l’enveloppant.<br>
