phase test , add all images , boilerplate and bootstrape

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>pierre-feuille-ciseaux</title>
   <script type="text/javascript" src="main.js"></script>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
   </head>
   <body>
@@ -18,7 +18,20 @@
   La feuille bat la pierre en l’enveloppant.<br>
   <span>bonne chance et que le meilleur gagne</span>
 </p>
-      <button type="button" name="button" onclick="game()">START</button>
+
+    </section>
+    <section>
+      <div id="ordi"><button type="button" name="button" onclick="game()">jouer</button></div>
+      <div><img id="image" src="" alt=""></div>
+
+      <div id="id">
+        <img id="pierre"></img>
+      </div>
+    </section>
+    <section>
+
+      <div></div>
+      <div></div>
     </section>
   </body>
 </html>
