--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>pierre-feuille-ciseaux</title>
-  <script type="text/javascript" src="main.js"></script>
+  <script type="text/javascript" src="js/main.js"></script>
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <link href="css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
   </head>
@@ -20,12 +22,21 @@
 </p>
 
     </section>
-    <section>
-      <div id="ordi"><button type="button" name="button" onclick="game()">jouer</button></div>
+    <section class="container">
+<div class="row">
+
+    <div class="col-3 "><img class="col-8" id="pierre" onclick="choix('pierre')"src="img/pierre.png" alt="pierre"></div>
+    <div class="col-3" ><img class="col-8" id="feuille" onclick="choix('feuille')"src="img/feuille.png" alt="feuille"></div>
+    <div class="col-3"><img class="col-8" id="ciseaux" onclick="choix('ciseaux')"src="img/ciseaux.png" alt="ciseaux"></div>
+    <div id="demo">
+    </div>
+
+    </div>
       <div><img id="image" src="" alt=""></div>
 
+
       <div id="id">
-        <img id="pierre"></img>
+      <img id="result" src="" alt="">
       </div>
     </section>
     <section>
