add style in js

--- a/index.html
+++ b/index.html
@@ -25,19 +25,26 @@
     <section class="container">
 <div class="row">
 
-    <div class="col-3 "><img class="col-8" id="pierre" onclick="choix('pierre')"src="img/pierre.png" alt="pierre"></div>
-    <div class="col-3" ><img class="col-8" id="feuille" onclick="choix('feuille')"src="img/feuille.png" alt="feuille"></div>
-    <div class="col-3"><img class="col-8" id="ciseaux" onclick="choix('ciseaux')"src="img/ciseaux.png" alt="ciseaux"></div>
-    <div id="demo">
+    <div class="col-3 "><img class="col-8" id="pierre" onclick="game('pierre')"src="img/pierre.png" alt="pierre"></div>
+    <div class="col-3" ><img class="col-8" id="feuille" onclick="game('feuille')"src="img/feuille.png" alt="feuille"></div>
+    <div class="col-3"><img class="col-8" id="ciseaux" onclick="game('ciseaux')"src="img/ciseaux.png" alt="ciseaux"></div>
+    <div class="col-3" id="demo">
+      <img class="col-8" id="ordi" src="" alt="">
     </div>
 
+    <div ><img  id="image" src="" alt=""></div>
     </div>
-      <div><img id="image" src="" alt=""></div>
+<div >
 
+<p id="score">score</p>
 
-      <div id="id">
-      <img id="result" src="" alt="">
-      </div>
+  <img id="scoregen" src="" alt="">
+
+</div>
+
+      <!-- <div id="id">
+    <button type="button" name="button" onclick="game()">start</button>
+      </div> -->
     </section>
     <section>
 
