add part lose and win in js

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
 <p id="score">score</p>
 
-  <img id="scoregen" src="" alt="">
-
+  <img id="scoregen" src="" alt=""> <br>
+<span id="final"></span>
 </div>
 
       <!-- <div id="id">
