add style in css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="row">
-      <div class="col-6 col-sm-8">
+      <div class="col-6 col-xs-7">
 
       <h1>PIERRE-FEUILLE-CISEAUX</h1>
 
@@ -24,7 +24,7 @@
   <span>bonne chance et que le meilleur gagne</span>
 </p>
 </div>
-<figure class="col-4 col-sm-4">
+<figure class="col-4 col-xs-4">
   <img class="col-6" id="kakashi" src="" alt="">
   <figcaption id="bienvenue"></figcaption>
   <input type="text" name="utilisateur" value="votre pseudo" id="name" onchange="username()">
